--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   --secondary-text-color: #717171;
   --border-color: #ebebeb;
   --shadow-color: rgba(0, 0, 0, 0.08);
-  --light-grey-bg: #f7f7f7;
+  --light-grey-bg: #ecebeb;
 }
 
 :host {
