--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -18,7 +18,7 @@
 
       <!-- Centralized container for top nav and search bar -->
       <div
-        class="d-flex align-items-center justify-content-center flex-column"
+        class="d-flex align-items-center justify-content-center flex-column ms-5"
       >
         <!-- Top Navigation Categories -->
         <div class="d-none d-lg-flex align-items-center top-nav-categories">
@@ -116,7 +116,7 @@
           <p class="label">Date</p>
           <p class="value">Add dates</p>
         </div>
-        <div class="search-filter-item d-flex align-items-center">
+        <div class="search-filter-item d-flex align-items-center justify-content-between">
           <div>
             <p class="label">Who</p>
             <p class="value">Add guests</p>
