--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -107,16 +107,19 @@
       class="search-bar-container d-flex align-items-center justify-content-center"
       (click)="openSearchModal()"
     >
-      <div class="search-filter-group">
-        <div class="search-filter-item p-3">
+      <div #container class="search-filter-group position-relative" >
+
+
+        <div id="float-div" #floatDiv [ngStyle]="movingStyles"  class="col-4 bg-danger rounded rounded-5 p-3 px-5"></div>
+        <div class="search-filter-item p-3"  #searchSection (click)="moveTo(searchSection)" [ngClass]="{'serach-active':searchLocationActive}">
           <p class="label">Where</p>
           <p class="value">Search destinations</p>
         </div>
-        <div class="search-filter-item p-3">
+        <div class="search-filter-item p-3" #searchDate (click)="moveTo(searchDate)"  [ngClass]="{'serach-active':searchDateActive}">
           <p class="label">Date</p>
           <p class="value">Add dates</p>
         </div>
-        <div class="search-filter-item d-flex align-items-center justify-content-between">
+        <div class="search-filter-item d-flex align-items-center justify-content-between"  #searchGuest (click)="moveTo(searchGuest)"  [ngClass]="{'serach-active':searchGuestActive}">
           <div>
             <p class="label">Who</p>
             <p class="value">Add guests</p>
