--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,21 @@
 
 } */
 
+
+:root {
+  --airbnb-red: #ff385c;
+  --airbnb-dark-red: #e00050;
+  --primary-text-color: #222222;
+  --secondary-text-color: #717171;
+  --border-color: #ebebeb;
+  --shadow-color: rgba(0, 0, 0, 0.08);
+  --light-grey-bg: #ecebeb;
+}
+
 :host {
   font-family: "Inter", sans-serif;
   color: var(--primary-text-color);
 }
-
 body.light {
   --airbnb-red: #ff385c;
   --airbnb-dark-red: #e00050;
