--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,4 +1,7 @@
-<header class="airbnb-header">
+<header
+  class="airbnb-header"
+  [ngClass]="{ 'search-bar-sticky': isSearchBarSticky }"
+>
   <nav class="navbar navbar-expand-lg">
     <div
       class="container-fluid d-flex align-items-center justify-content-between px-4 position-relative"
@@ -33,7 +36,7 @@
             (mouseleave)="pauseVideo($event)"
             routerLink="/{{item.label.toLowerCase()}}"
           >
-            <img [alt]="item.label + ' Icon'" [src]="item.imgSrc" />
+            <img [alt]="item.label + ' Icon'" [src]="item.imgSrc" width="100" />
             <video
               class="s1kxodx6 atm_jp_1f51e7f atm_jr_1h6ojuz atm_vy_1osqo2v atm_e2_1osqo2v atm_tr_18ws4an atm_mj_glywfm s1y8p483 atm_mk_stnw88 atm_tk_idpfg4 atm_fq_idpfg4 stz1the atm_k4_kb7nvz dir dir-ltr"
               playsinline
@@ -90,13 +93,52 @@
     }"
             (animationend)="onAnimationEnd()"
           >
-            <li><a class="dropdown-item" routerLink="/signup">Sign up</a></li>
-            <li><a class="dropdown-item" routerLink="/login">Log in</a></li>
-            <li><hr class="dropdown-divider" /></li>
             <li>
-              <a class="dropdown-item" routerLink="/host">Airbnb your home</a>
+              <a
+                class="dropdown-item d-flex align-items-center gap-2"
+                routerLink="/signup"
+              >
+                <i class="bi bi-person-plus"></i> Sign up
+              </a>
             </li>
-            <li><a class="dropdown-item" routerLink="/help">Help</a></li>
+
+            <li>
+              <a
+                class="dropdown-item d-flex align-items-center gap-2"
+                routerLink="/login"
+              >
+                <i class="bi bi-box-arrow-in-right"></i> Log in
+              </a>
+            </li>
+
+            <li><hr class="dropdown-divider" /></li>
+
+            <li
+              class="dropdown-item d-flex align-items-center gap-2"
+              style="cursor: pointer;"
+              (click)="toggleTheme()"
+            >
+              <i class="bi" [ngClass]="isDarkMode ? 'bi-sun' : 'bi-moon'"></i>
+              {{ isDarkMode ? 'Light Mode' : 'Dark Mode' }}
+            </li>
+
+            <li>
+              <a
+                class="dropdown-item d-flex align-items-center gap-2"
+                routerLink="/host"
+              >
+                <i class="bi bi-house-door-fill"></i> Airbnb your home
+              </a>
+            </li>
+
+            <li>
+              <a
+                class="dropdown-item d-flex align-items-center gap-2"
+                routerLink="/help"
+              >
+                <i class="bi bi-question-circle"></i> Help
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -113,35 +155,46 @@
         #filterGroupRef
       >
         <div
-          class="search-filter-item "
+          class="search-filter-item d-flex align-items-start justify-content-center flex-column"
           #whereRef
           [ngClass]="{ 'active': activeFilter === 'where' }"
           (click)="setActive('where')"
         >
+          @if (isSearchBarSticky) {
+          <p class="label mb-0">Any Where</p>
+          }@else{
           <p class="label mb-0">Where</p>
           <!-- <p class="value">Search destinations</p> -->
           <input
-            class="search-input dest "
+            class="search-input dest"
             type="text"
             placeholder="Search destinations"
           />
+          }
         </div>
         <div
-          class="search-filter-item"
+          class="search-filter-item d-flex align-items-start justify-content-center flex-column"
           #dateRef
           [ngClass]="{ 'active': activeFilter === 'date' }"
           (click)="setActive('date')"
         >
+          @if (isSearchBarSticky) {
+          <p class="label">Add Date</p>
+          }@else{
           <p class="label">Date</p>
           <p class="value">Add dates</p>
+          }
         </div>
         <div
-          class="search-filter-item d-flex align-items-center justify-content-between"
+          class="search-filter-item d-flex align-items-center justify-content-center"
           #whoRef
           [ngClass]="{ 'active': activeFilter === 'who' }"
           (click)="setActive('who')"
         >
           <div>
+            @if (isSearchBarSticky) {
+            <p class="label">Add Guests</p>
+            }@else{
             <p class="label">Who</p>
             <p class="value">
               <ng-container *ngIf="getTotalGuests() > 0">
@@ -163,6 +216,7 @@
                 Add guests
               </ng-container>
             </p>
+            }
           </div>
           <div class="ms-auto">
             <div
@@ -218,7 +272,7 @@
             <div
               *ngSwitchCase="'where'"
               class="custom-scroll"
-              style="max-height: 420px; max-width: 350px;"
+              style="max-height: 420px; padding: 18px 0px 18px 12px;"
             >
               <div class="p-2">
                 <!-- <div class="mb-4">
@@ -249,7 +303,7 @@
                       />
                       <div>
                         <p class="mb-0 fw-bold">{{ destination.name }}</p>
-                        <small class="text-muted"
+                        <small style="color: var(--secondary-text-color);"
                           >{{ destination.description }}</small
                         >
                       </div>
@@ -270,7 +324,15 @@
               </div>
             </div>
 
-            <div *ngSwitchCase="'date'">
+            <div
+              *ngSwitchCase="'date'"
+              style="
+                max-height: 351px;
+                max-width: 610px;
+                overflow-y: hidden;
+                padding: 20px;
+              "
+            >
               <div
                 class="d-flex flex-row custom-date-modal-content airbnb-calendar-wrapper"
               >
@@ -281,23 +343,21 @@
                     (click)="selectQuickDate('today')"
                   >
                     <p class="fw-bold mb-0">Today</p>
-                    <small class="text-muted">{{ getTodayFormatted() }}</small>
+                    <small>{{ getTodayFormatted() }}</small>
                   </div>
                   <div
                     class="quick-option-card airbnb-option"
                     (click)="selectQuickDate('tomorrow')"
                   >
                     <p class="fw-bold mb-0">Tomorrow</p>
-                    <small class="text-muted"
-                      >{{ getTomorrowFormatted() }}</small
-                    >
+                    <small>{{ getTomorrowFormatted() }}</small>
                   </div>
                   <div
                     class="quick-option-card airbnb-option"
                     (click)="selectQuickDate('thisWeekend')"
                   >
                     <p class="fw-bold mb-0">This weekend</p>
-                    <small class="text-muted">
+                    <small>
                       {{ getFridayDate() }} &ndash; {{ getSaturdayDate() }}
                     </small>
                   </div>
@@ -308,7 +368,7 @@
                   <ngx-daterangepicker-material
                     [locale]="locale"
                     [ranges]="{}"
-                    [linkedCalendars]="true"
+                    [linkedCalendars]="false"
                     [alwaysShowCalendars]="true"
                     [singleDatePicker]="false"
                     [showCustomRangeLabel]="false"
@@ -322,7 +382,7 @@
               </div>
             </div>
 
-            <div *ngSwitchCase="'who'">
+            <div *ngSwitchCase="'who'" style="padding: 0px 10px;">
               <div class="guest-options p-3">
                 <div
                   *ngFor="let guest of guests; let i = index"
@@ -334,8 +394,10 @@
                   >
                     <p class="mb-0 fw-bold">{{ guest.label }}</p>
                     <p
-                      class="text-muted"
-                      style="min-width: max-content;"
+                      style="
+                        min-width: max-content;
+                        color: var(--secondary-text-color);
+                      "
                       *ngIf="guest.subLabel"
                     >
                       {{ guest.subLabel }}
