--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,8 @@ body.light {
   --light-grey-bg: #ecebeb;
   --bg-color: #fff;
   --head: rgba(0, 0, 0, 0.02);
-  --active:white;
+  --active: white;
+  --bg: rgba(0, 0, 0, 0.1);
 }
 
 body.dark {
@@ -40,7 +41,8 @@ body.dark {
   --light-grey-bg: #2e2e2e;
   --bg-color: #121212;
   --head: rgba(255, 255, 255, 0.03);
-  --active:#3a3a3a;
+  --active: #3a3a3a;
+  --bg: rgba(255, 255, 255, 0.1);
 }
 
 body {
