--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -1,1 +1,7 @@
 <app-header></app-header>
+
+
+<main class="main-content " style="margin-top: 12rem;">
+  <div class="shimmer mb-3" style="width: 200px; height: 20px;"></div>
+  <div class="shimmer" style="width: 100px; height: 100px;"></div>
+</main>
