--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
 <app-main-layout></app-main-layout>
+<app-host-properties> </app-host-properties>
 <main>
   <router-outlet></router-outlet>
+
 </main>
