--- a/src/app/shared/components/slider/slider.html
+++ b/src/app/shared/components/slider/slider.html
@@ -1,17 +1,14 @@
-<div class="slider-section">
-  <h2>{{ sectionTitle }}</h2>
-  <div class="slider-wrapper">
-    <button class="arrow left" (click)="scrollLeft()">❮</button>
-    <div class="scroll-container" #scrollContainer>
-      <app-slider-card *ngFor="let listing of listings"
-        [imageUrl]="listing.imageUrl"
-        [title]="listing.title"
-        [subtitle]="listing.subtitle"
-        [price]="listing.price"
-        [rating]="listing.rating"
-        [isFavorite]="listing.isFavorite">
-      </app-slider-card>
+<div class="slider-wrapper">
+    <div class="d-flex justify-content-end">
+        <button class="nav left" (click)="scrollLeft()" [disabled]="isAtStart">❮</button>
+        <button class="nav right" (click)="scrollRight()" [disabled]="isAtEnd">❯</button>
     </div>
-    <button class="arrow right" (click)="scrollRight()">❯</button>
-  </div>
+    <div #scrollContainer class="card-container">
+        <ng-content 
+        >
+        <!-- select=".card-item" -->
+        </ng-content>
+
+    </div>
+
 </div>
