--- a/src/app/pages/home/components/slider-card/slider-card.css
+++ b/src/app/pages/home/components/slider-card/slider-card.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .card {
   width: 250px;
@@ -37,6 +37,11 @@
 }
 .info {
   padding: 10px;
+  display: flex;
+  & >{
+    margin-left: 0.5rem ;
+    margin-right: 0.5rem ;
+  }
 }
 .title {
   font-weight: bold;
@@ -52,4 +57,46 @@
 .rating {
   font-size: 14px;
   color: #555;
+} */
+
+.card {
+ 
+  overflow: hidden;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  transition: transform 0.2s ease-in-out;
+  background-color: var(--active);
+  color: var(--primary-text-color);
+}
+.card:hover {
+  transform: scale(1.02);
+}
+.image-container img {
+  width: 100%;
+  /* height: 180px; */
+  object-fit: cover;
+}
+.favorite {
+  font-size: 12px;
+  padding: 4px 10px;
+  border-radius: 999px;
+
+  color:var(--primary-text-color);
+  background-color: var(--bg-color);
+}
+.heart {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.title {
+  font-size: 16px;
+}
+.subtitle {
+  font-size: 13px;
+}
+.price {
+  font-size: 15px;
+}
+.rating {
+  font-size: 14px;
 }
