--- a/src/app/shared/components/slider/slider.css
+++ b/src/app/shared/components/slider/slider.css
@@ -1,30 +1,47 @@
-.slider-section {
-  margin: 30px 0;
-}
 .slider-wrapper {
   position: relative;
-  display: flex;
+  /* display: flex; */
+  /* flex-direction: column; */
   align-items: center;
+  width: 100%; 
 }
-.scroll-container {
-  display: flex;
-  gap: 16px;
+
+.card-container {
   overflow-x: auto;
   scroll-behavior: smooth;
-  padding: 10px 0;
+  display: flex;
+  gap: 16px;
+  padding: 1rem 0;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none; 
+  -ms-overflow-style: none;
 }
-.arrow {
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  font-size: 20px;
+
+.card-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* .card-item {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  transition: transform 0.3s ease;
+} */
+.card-container>* {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  transition: transform 0.3s ease;
+}
+
+.nav {
+  border: none;
+  background-color: transparent;
+  font-size: 1.5rem;
   cursor: pointer;
+  padding: 0 10px;
 }
-.left {
-  margin-right: 10px;
-}
-.right {
-  margin-left: 10px;
+
+.nav:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
 }
